# r2py-gtable

./: README.md  pyproject.toml
dev/: CODE_OF_CONDUCT.html  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json
dev/articles/: index.html  index.md  profiling.html  profiling.md
dev/news/: index.html  index.md
dev/reference/: as.gtable.html  as.gtable.md  bind.html  bind.md  gtable-package.html  gtable-package.md  gtable.html  gtable.md  gtable_add_cols.html  gtable_add_cols.md  gtable_add_grob.html  gtable_add_grob.md  gtable_add_padding.html  gtable_add_padding.md  gtable_add_rows.html  gtable_add_rows.md  gtable_add_space.html  gtable_add_space.md  gtable_col.html  gtable_col.md  gtable_filter.html  gtable_filter.md  gtable_height.html  gtable_height.md  gtable_matrix.html  gtable_matrix.md  gtable_row.html  gtable_row.md  gtable_show_layout.html  gtable_show_layout.md  gtable_spacer.html  gtable_spacer.md  gtable_trim.html  gtable_trim.md  gtable_width.html  gtable_width.md  index.html  index.md  is.gtable.html  is.gtable.md  (+2 more)
python/: README.md
src/gtable_r2py/: __init__.py  add.py  combine.py  grid_integration.py  gtable.py  layout_table.py  layouts.py  modify.py  utils.py  z.py
tests/: conftest.py  test_add.py  test_combine.py  test_grid_integration.py  test_gtable.py  test_integration.py  test_layout_table.py  test_layouts.py  test_modify.py  test_utils.py  test_z.py
